kubernetes/zero.vsense.fr/seedbox/couchpotato.yml
---
apiVersion: v1
kind: Service
metadata:
  name: couchpotato
  labels:
    app: couchpotato
  namespace: seedbox
spec:
  selector:
    app: couchpotato
  ports:
    - port: 5050
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: seedbox
  name: couchpotato
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: movies.archifleks.net
      http:
        paths:
          - backend:
              serviceName: couchpotato
              servicePort: 5050
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: couchpotato
  name: couchpotato
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: couchpotato
  template:
    metadata:
      labels:
        app: couchpotato
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
      containers:
      - env:
        - name: PGID
          value: "5001"
        - name: PUID
          value: "5001"
        - name: TZ
          value: Europe/Paris
        image: linuxserver/couchpotato
        imagePullPolicy: Always
        name: couchpotato
        ports:
        - containerPort: 5050
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: couchpotato-data
        - mountPath: /downloads
          name: couchpotato-downloads
        resources:
          requests:
            cpu: 100m
            memory: 100M
          limits:
            cpu: 200m
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        fsGroup: 5001
      volumes:
      - hostPath:
          path: /srv/configs/couchpotato
          type: ""
        name: couchpotato-data
      - hostPath:
          path: /srv/seedbox
          type: ""
        name: couchpotato-downloads
