kubernetes/zero.vsense.fr/seedbox/rtorrent.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: seedbox
  name: rtorrent-internal
  labels:
    app: rtorrent
spec:
  selector:
    app: rtorrent
  ports:
    - port: 80
      name: rtorrent-80
    - port: 5000
      name: rtorrent-5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: seedbox
  name: torrents
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: torrents.archifleks.net
      http:
        paths:
          - backend:
              serviceName: rtorrent-internal
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rtorrent
  name: rtorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rtorrent
  template:
    metadata:
      labels:
        app: rtorrent
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
      containers:
      - env:
        - name: PGID
          value: "5001"
        - name: PUID
          value: "5001"
        - name: TZ
          value: Europe/Paris
        image: linuxserver/rutorrent
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - rm
              - /downloads/sessions/rtorrent.lock
        resources:
          requests:
            cpu: 1
            memory: 200M
          limits:
            cpu: 1
        name: rtorrent
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 5000
          protocol: TCP
        - containerPort: 6881
          hostPort: 6881
          protocol: TCP
        - containerPort: 51413
          hostPort: 51413
          protocol: TCP
        volumeMounts:
        - mountPath: /config/rtorrent/rtorrent.rc
          name: rtorrent-config
          subPath: rtorrent.rc
        - mountPath: /downloads
          name: rtorrent-downloads
        - mountPath: /config/rutorrent
          name: rutorrent-config
      restartPolicy: Always
      securityContext:
        fsGroup: 5001
      volumes:
      - configMap:
          defaultMode: 420
          name: rtorrent-config
        name: rtorrent-config
      - hostPath:
          path: /srv/configs/rutorrent
        name: rutorrent-config
      - hostPath:
          path: /srv/seedbox
        name: rtorrent-downloads
