kubernetes/zero.vsense.fr/seedbox/sickrage.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: seedbox
  name: sickrage
  labels:
    app: sickrage
spec:
  selector:
    app: sickrage
  ports:
    - port: 8081
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: seedbox
  name: sickrage
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: tv.archifleks.net
      http:
        paths:
          - backend:
              serviceName: sickrage
              servicePort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sickrage
  name: sickrage
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: sickrage
  template:
    metadata:
      labels:
        app: sickrage
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
      containers:
      - env:
        - name: VERSION
          value: latest
        - name: PGID
          value: "5001"
        - name: PUID
          value: "5001"
        - name: TZ
          value: Europe/Paris
        image: linuxserver/sickrage
        resources:
          requests:
            cpu: 100m
            memory: 100M
          limits:
            cpu: 300m
        imagePullPolicy: Always
        name: sickrage
        ports:
        - containerPort: 8081
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: sickrage-data
        - mountPath: /downloads
          name: sickrage-downloads
      restartPolicy: Always
      securityContext:
        fsGroup: 5001
      volumes:
      - hostPath:
          path: /srv/configs/sickrage
          type: ""
        name: sickrage-data
      - hostPath:
          path: /srv/seedbox
          type: ""
        name: sickrage-downloads
